Try radical view

--- a/resources/layouts/layouts.xml
+++ b/resources/layouts/layouts.xml
@@ -62,36 +62,48 @@
     <!-- Layouts used for the for the four quadrants. -->
     <layout id="TopLeftLayout">
         <drawable class="Background" />
+        <label id="temperature" x="6%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_NUMBER_MILD" />
         <label id="label" x="95" y="75" color="Graphics.COLOR_LT_GRAY" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
-        <label id="humidity" x="95" y="42" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_LARGE" />
-        <label id="station" x="left" y="top" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_XTINY" />
+        <label id="humidity" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_NUMBER_MEDIUM" />
+        <label id="errorValue" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_SMALL" visible="false"/>
+        <label id="pressure" x="left" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
+        <label id="station" x="right" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
         <label id="version" x="center" y="center"
         	justification="Graphics.TEXT_JUSTIFY_CENTER"
         	font="Graphics.FONT_MEDIUM" color="Graphics.COLOR_ORANGE">
         </label></layout>
     <layout id="TopRightLayout">
         <drawable class="Background" />
+        <label id="temperature" x="6%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_NUMBER_MILD" />
         <label id="label" x="14" y="75" color="Graphics.COLOR_LT_GRAY" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
-        <label id="humidity" x="14" y="42" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_LARGE" />
-        <label id="station" x="right" y="top" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_XTINY" />
+        <label id="humidity" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_NUMBER_MEDIUM" />
+        <label id="errorValue" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_SMALL" visible="false"/>
+        <label id="pressure" x="left" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
+        <label id="station" x="right" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
         <label id="version" x="center" y="center"
         	justification="Graphics.TEXT_JUSTIFY_CENTER"
         	font="Graphics.FONT_MEDIUM" color="Graphics.COLOR_ORANGE">
         </label></layout>
     <layout id="BottomLeftLayout">
         <drawable class="Background" />
+        <label id="temperature" x="6%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_NUMBER_MILD" />
         <label id="label" x="95" y="10" color="Graphics.COLOR_LT_GRAY" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
-        <label id="humidity" x="95" y="27" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_LARGE" />
-        <label id="station" x="left" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_XTINY" />
+        <label id="humidity" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_NUMBER_MEDIUM" />
+        <label id="errorValue" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_SMALL" visible="false"/>
+        <label id="pressure" x="left" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
+        <label id="station" x="right" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
         <label id="version" x="center" y="center"
         	justification="Graphics.TEXT_JUSTIFY_CENTER"
         	font="Graphics.FONT_MEDIUM" color="Graphics.COLOR_ORANGE">
         </label></layout>
     <layout id="BottomRightLayout">
         <drawable class="Background" />
+        <label id="temperature" x="6%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_NUMBER_MILD" />
         <label id="label" x="14" y="10" color="Graphics.COLOR_LT_GRAY" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
-        <label id="humidity" x="14" y="27" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_LARGE" />
-        <label id="station" x="right" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_XTINY" />
+        <label id="humidity" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_NUMBER_MEDIUM" />
+        <label id="errorValue" x="88%" y="center" color="Graphics.COLOR_BLACK" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_SMALL" visible="false"/>
+        <label id="pressure" x="left" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_LEFT" font="Graphics.FONT_TINY" />
+        <label id="station" x="right" y="bottom" color="Graphics.COLOR_PURPLE" justification="Graphics.TEXT_JUSTIFY_RIGHT" font="Graphics.FONT_TINY" />
         <label id="version" x="center" y="center"
         	justification="Graphics.TEXT_JUSTIFY_CENTER"
         	font="Graphics.FONT_MEDIUM" color="Graphics.COLOR_BLACK"
